<resources>
    <string name="app_name">Calculate Application</string>
    <string name="s_button">C</string>
    <string name="baseturn_button">进制转换</string>
    <string name="memoryback_button">返回</string>
    <string name="memory_button">运算记录</string>
    <string name="memory_clear">清除</string>
    <string name="base16_button">16进制</string>
    <string name="base10_button">10进制</string>
    <string name="base8_button">8进制</string>
    <string name="base2_button">2进制</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="zero_button">0</string>
    <string name="a_button">A</string>
    <string name="b_button">B</string>
    <string name="c_button">C</string>
    <string name="d_button">D</string>
    <string name="e_button">E</string>
    <string name="f_button">F</string>
    <string name="add_button">+</string>
    <string name="minus_button">-</string>
    <string name="multiply_button">*</string>
    <string name="divide_button">/</string>
    <string name="result_button">=</string>
    <string name="back_button">←</string>
    <string name="cancel_button">返回</string>
    <string name="pow_button">^</string>
    <string name="sqrt_button">√</string>
    <string name="sin_button">sin</string>
    <string name="cos_button">cos</string>
    <string name="tan_button">tan</string>
    <string name="ln_button">ln</string>
    <string name="lg_button">lg</string>
    <string name="left_button">(</string>
    <string name="right_button">)</string>
    <string name="pi_button">圆周率(π)</string>
    <string name="ee_button">自然底数(e)</string>
    <string name="afn">阿富汗尼（AFN）</string>
    <string name="ang">荷兰盾（ANG）</string>
    <string name="ars">阿根廷比索（ARS）</string>
    <string name="aud">澳大利亚元（AUD）</string>
    <string name="bhd">巴林第纳尔（BHD）</string>
    <string name="bnd">文莱元（BND）</string>
    <string name="brl">巴西雷亚尔（BRL）</string>
    <string name="bsd">巴哈马元（BSD）</string>
    <string name="btn">不丹努扎姆（BTN）</string>
    <string name="byr">白俄罗斯卢布（BYR）</string>
    <string name="cad">加拿大元（CAD）</string>
    <string name="cdf">刚果法郎（CDF）</string>
    <string name="chf">瑞士法郎（CHF）</string>
    <string name="cny">人民币（CNY）</string>
    <string name="dzd">阿尔及利亚第纳尔（DZD）</string>
    <string name="egp">埃及镑（EGP）</string>
    <string name="eur">欧元（EUR）</string>
    <string name="gbp">英镑（GBP）</string>
    <string name="gip">直布罗陀镑（GIP）</string>
    <string name="hkd">港币（HKD）</string>
    <string name="idr">印度尼西亚盾（IDR）</string>
    <string name="inr">印度卢比（INR）</string>
    <string name="iqd">伊拉克第纳尔（IQD）</string>
    <string name="irr">伊朗里亚尔（IRR）</string>
    <string name="isk">冰岛克朗（ISK）</string>
    <string name="jod">约旦第纳尔（JOD）</string>
    <string name="jpy">日元（JPY）</string>
    <string name="kpw">朝鲜元（KPW）</string>
    <string name="krw">韩国元（KRW）</string>
    <string name="kwd">科威特第纳尔（KWD）</string>
    <string name="lyd">利比亚第纳尔（LYD）</string>
    <string name="mop">澳门币（MOP）</string>
    <string name="rub">俄罗斯卢布（RUB）</string>
    <string name="sos">索马里先令（SOS）</string>
    <string name="thb">泰铢（THB）</string>
    <string name="twd">新台币（TWD）</string>
    <string name="usd">美元（USD）</string>
    <string name="vnd">越南盾（VND）</string>
    <string name="zwl">津巴布韦元（ZWL）</string>
    <string name="from_money">待转换货币</string>
    <string name="goal_money">目标货币</string>
    <string name="money_button">汇率换算</string>
</resources>
