<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/afn"
        android:title="@string/afn"/>
    <item android:id="@+id/ang"
        android:title="@string/ang"/>
    <item android:id="@+id/ars"
        android:title="@string/ars"/>
    <item android:id="@+id/aud"
        android:title="@string/aud"/>
    <item android:id="@+id/bhd"
        android:title="@string/bhd"/>
    <item android:id="@+id/bnd"
        android:title="@string/bnd"/>
    <item android:id="@+id/brl"
        android:title="@string/brl"/>
    <item android:id="@+id/bsd"
        android:title="@string/bsd"/>
    <item android:id="@+id/btn"
        android:title="@string/btn"/>
    <item android:id="@+id/byr"
        android:title="@string/byr"/>
    <item android:id="@+id/cad"
        android:title="@string/cad"/>
    <item android:id="@+id/cdf"
        android:title="@string/cdf"/>
    <item android:id="@+id/chf"
        android:title="@string/chf"/>
    <item android:id="@+id/cny"
        android:title="@string/cny"/>
    <item android:id="@+id/dzd"
        android:title="@string/dzd"/>
    <item android:id="@+id/egp"
        android:title="@string/egp"/>
    <item android:id="@+id/eur"
        android:title="@string/eur"/>
    <item android:id="@+id/gbp"
        android:title="@string/gbp"/>
    <item android:id="@+id/gip"
        android:title="@string/gip"/>
    <item android:id="@+id/hkd"
        android:title="@string/hkd"/>
    <item android:id="@+id/idr"
        android:title="@string/idr"/>
    <item android:id="@+id/inr"
        android:title="@string/inr"/>
    <item android:id="@+id/iqd"
        android:title="@string/iqd"/>
    <item android:id="@+id/irr"
        android:title="@string/irr"/>
    <item android:id="@+id/isk"
        android:title="@string/isk"/>
    <item android:id="@+id/jod"
        android:title="@string/jod"/>
    <item android:id="@+id/jpy"
        android:title="@string/jpy"/>
    <item android:id="@+id/kpw"
        android:title="@string/kpw"/>
    <item android:id="@+id/krw"
        android:title="@string/krw"/>
    <item android:id="@+id/kwd"
        android:title="@string/kwd"/>
    <item android:id="@+id/lyd"
        android:title="@string/lyd"/>
    <item android:id="@+id/mop"
        android:title="@string/mop"/>
    <item android:id="@+id/rub"
        android:title="@string/rub"/>
    <item android:id="@+id/sos"
        android:title="@string/sos"/>
    <item android:id="@+id/thb"
        android:title="@string/thb"/>
    <item android:id="@+id/twd"
        android:title="@string/twd"/>
    <item android:id="@+id/usd"
        android:title="@string/usd"/>
    <item android:id="@+id/vnd"
        android:title="@string/vnd"/>
    <item android:id="@+id/zwl"
        android:title="@string/zwl"/>
</menu>